<resources>
    <string name="app_name">StoryApp</string>
    <string name="error_password">Password must contain 8 letter</string>
    <string name="email">Enter your email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password">Enter your password</string>
    <string name="error_email">Require a valid email address</string>
    <string name="error_username">Invalid username</string>
    <string name="error_password_not_match">Password confirmation doesn\'t match</string>
    <string name="dialog_title">Exit App</string>
    <string name="dialog_message">Do you want to exit an App?</string>
    <string name="dialog_positive_button" type="id">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="success_pick_media">Success pick a media</string>
    <string name="error_pick_media">Error when picking image</string>
    <string name="error_upload">Failed to upload!</string>
    <string name="detail_story">Detail Story</string>
    <string name="image_desc">Image detail</string>
    <string name="login_welcome_text">Welcome back! Glad to see you, Again!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register_welcome_text">Hello! Register to get started</string>
    <string name="username">Enter Your Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_here">Login Here</string>
    <string name="hello_username">Hello, %1$s</string>
    <string name="greetings_text">Enjoy your experience here</string>
    <string name="user_profile">Username</string>
    <string name="general_settings">General Settings</string>
    <string name="change_language">Change Language</string>
    <string name="log_out">Log out</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="land_login_welcome_text">Welcome back!\nGlad to see you, Again!</string>
    <string name="land_register_welcome_text">Hello! Register to get \nstarted</string>
    <string name="failed_load_map">Failed to load map</string>
    <string name="retry">Retry</string>
    <string name="failed_permission">Failed to request permission</string>
</resources>