<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:fontFamily="@font/comic_neue"
        android:text="@string/register_welcome_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1" />

    <EditText
        android:id="@+id/evUsername"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:background="@drawable/custom_background_edit_text"
        android:drawableStart="@drawable/custom_ic_username"
        android:drawablePadding="16dp"
        android:fontFamily="@font/lato"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textColorHint="?attr/colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:alpha="1" />

    <com.example.storyapp.component.EmailTextField
        android:id="@+id/evEmailAddress"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:background="@drawable/custom_background_edit_text"
        android:drawableStart="@drawable/custom_ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textColorHint="?attr/colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evUsername"
        tools:alpha="1" />

    <com.example.storyapp.component.PasswordTextField
        android:id="@+id/evPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:background="@drawable/custom_background_edit_text"
        android:drawableStart="@drawable/custom_ic_password"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textColorHint="?attr/colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evEmailAddress"
        tools:alpha="1" />


    <Button
        android:id="@+id/btnRegister"
        style="@style/CustomStyleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:text="@string/register"
        android:textColor="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evPassword"
        tools:alpha="1" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_here"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>